--- a/app/src/main/res/layout/upis_predmet.xml
+++ b/app/src/main/res/layout/upis_predmet.xml
@@ -9,6 +9,7 @@
         android:id="@+id/odabirGodina"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:focusable="false"
         app:layout_constraintBottom_toTopOf="@+id/odabirPredmet"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="94dp" />
